# kartogen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: kartogen.toml  tectonic_sim.toml  worldgen.toml
demos/: __init__.py
docs/terrain/: TERRAIN_GENERATION.md
kartogen/: __init__.py  __main__.py  _log.py  biome.py  climate.py  config_loader.py  elevation.py  export.py  hydrology.py  ocean.py  pipeline.py  preview.py  rng.py  sea.py  tectonics.py  tectonics_cast.py  types.py  world.py
sim/world/: noise.py  terrain.py
sim/world/worldgen/: __init__.py  biome.py  climate.py  config_loader.py  elevation.py  hydrology.py  pipeline.py  plates.py  preview.py  resources.py  sea.py  types.py
tectonic_sim/: __init__.py  __main__.py  _log.py  collisions.py  config_loader.py  constraints.py  divergent.py  io.py  isostasy.py  kinematics.py  noise.py  overlap.py  randomization.py  rng.py  seeding.py  spatial.py  transect.py  types.py  viz.py
tectonic_sim/polygon_sim/: __init__.py  accretion.py  aging.py  contention.py  culling.py  damping.py  divergent.py  edge_smoothing.py  fusion.py  hotspots.py  isostasy.py  kinematics.py  momentum.py  polygons.py  rasterize.py  rifting.py  seeding.py  simulate.py  topology.py  types.py  viz.py
tectonic_sim/tests/: conftest.py  test_collisions.py  test_constraints.py  test_divergent.py  test_edge_smoothing.py  test_kinematics.py  test_overlap.py  test_randomization.py  test_seeding.py  test_spatial.py  test_transect.py  test_types_and_config.py  test_viz.py
tests/: conftest.py  test_biome.py  test_climate.py  test_climate_lat_window.py  test_continental_relief.py  test_drift.py  test_elevation.py  test_export.py  test_hydrology.py  test_noise.py  test_ocean.py  test_pipeline.py  test_plates.py  test_resources.py  test_rift_and_warp.py  test_rift_fill.py  test_tectonics.py
tests/worldgen/: conftest.py  test_biome.py  test_climate.py  test_elevation.py  test_hydrology.py  test_noise.py  test_pipeline.py  test_plates.py  test_resources.py
worldgen/: __init__.py  __main__.py  _log.py  biome.py  climate.py  config_loader.py  elevation.py  export.py  hex.py  hydrology.py  ocean.py  pipeline.py  plates.py  preview.py  resources.py  rng.py  sea.py  tectonics.py  tectonics_cast.py  terrain.py  types.py  world.py
