[project]
name = "worldgen"
version = "0.1.0"
description = "Deterministic, layered hex-grid world generator (elevation, climate, hydrology, biomes)."
requires-python = ">=3.11"
dependencies = [
    # Pillow is required for the preview + export PNG rendering. The
    # rendering layer is now part of the standard surface (export.py uses
    # preview.render internally), so Pillow moves from `[preview]` extra to
    # a core dependency.
    "Pillow>=10.0",
    # tqdm drives the per-layer progress bars when verbose logging is on.
    # Pulled into core because the CLI is verbose by default.
    "tqdm>=4.66",
    # numpy backs the tectonic_sim particle cloud — vectorised drift,
    # spatial queries, and snapshot arrays. Worldgen itself never imports
    # numpy directly, but it ships in the same env as tectonic_sim.
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
# Both packages live at the repo root, in the same install. The
# in-package tests directory (``tectonic_sim/tests``) is excluded so
# the wheel doesn't ship test code to consumers.
include = ["worldgen*", "tectonic_sim*"]
exclude = ["tectonic_sim.tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["worldgen", "tectonic_sim", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["worldgen", "tectonic_sim"]

[tool.pytest.ini_options]
# Worldgen tests are temporarily disabled while we focus on tectonic_sim.
# Re-add ``"tests"`` to this list when we resume worldgen integration
# (Phases 11–13 — bridge, cutover, preview delegation).
testpaths = ["tectonic_sim/tests"]
