[project]
name = "kartogen"
version = "0.1.0"
description = "Deterministic, layered hex-grid world generator (elevation, climate, hydrology, biomes)."
requires-python = ">=3.11"
dependencies = [
    # Pillow is required for the preview + export PNG rendering. The
    # rendering layer is now part of the standard surface (export.py uses
    # preview.render internally), so Pillow moves from `[preview]` extra to
    # a core dependency.
    "Pillow>=10.0",
    # tqdm drives the per-layer progress bars when verbose logging is on.
    # Pulled into core because the CLI is verbose by default.
    "tqdm>=4.66",
    # numpy backs the tectonic_sim particle cloud — vectorised drift,
    # spatial queries, and snapshot arrays. Kartogen itself never imports
    # numpy directly, but it ships in the same env as tectonic_sim.
    "numpy>=1.26",
    # scipy is a hard dependency of tectonic_sim: spatial.py uses
    # scipy.spatial (cKDTree, Delaunay) for plate-particle queries and
    # triangulation. The contact prototype demos also use scipy.ndimage
    # for connected-component labelling.
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
    # py-spy is a sampling profiler — attaches to a running process or
    # wraps `python` invocations to record flame graphs with near-zero
    # overhead. Used by demos/profile_polygon.py.
    "py-spy>=0.3.14",
]

[tool.setuptools.packages.find]
# Both packages live at the repo root, in the same install. The
# in-package tests directory (``tectonic_sim/tests``) is excluded so
# the wheel doesn't ship test code to consumers.
include = ["kartogen*", "tectonic_sim*"]
exclude = ["tectonic_sim.tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["kartogen", "tectonic_sim", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["kartogen", "tectonic_sim"]

[tool.pytest.ini_options]
testpaths = ["tectonic_sim/tests", "tests"]
markers = [
    # Integration tests that drive a full `generate()` / 100-tick tectonic
    # sim (or the session world fixtures) — seconds each. Skip during quick
    # iteration with `pytest -m "not slow"`; run the full suite (incl. slow)
    # before committing.
    "slow: end-to-end pipeline/sim test (deselect with -m 'not slow')",
]
